--- a/html/vote.html
+++ b/html/vote.html
@@ -10,20 +10,23 @@
 </head>
 <body>
     <div class="vote-wrap">
-        <section class="vote-item">
+        <!-- <section class="vote-item active">
+        		<pre>1</pre>
             <div class="head-wrap">
-                <img src="https://ss0.baidu.com/73t1bjeh1BF3odCf/it/u=4236873362,1731817918&fm=85&s=D100D41A4E1072D80E070D5D030050E2" alt="" class="head-img">
-                
+                <span>《青春时刻》</span>
             </div>
             <div class="process-wrap">
                 <div class="process"></div>
             </div>
+            <em>50票</em>
         </section>
-        <div class="block"></div>
+        <div class="block"></div> -->
     </div>
-    <div class="submit-wrap">
-        <p class="detail-wrap">已选：<span class="mark">3号</span></p>
-        <button class="submit-button">投票</button>
+    <div class="submit-wrap hide">
+      <div class="submit-content">
+        <p class="detail-wrap">已选：<span class="mark"></span></p>
+        <button class="submit-button" id="submit">投票</button>
+      </div>
     </div>
 </body>
 <script src="../js/jquery.js"></script>
