修改获奖类型

--- a/html/index.html
+++ b/html/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <section class="list-wrap">
-        <a href="./program.html?type=0" class="list-item-button">团体最受欢迎奖</a>
-        <a href="./program.html?type=0" class="list-item-button">团体最佳上进奖</a>
-        <a href="./program.html?type=1" class="list-item-button">个人最受欢迎奖</a>
-        <a href="./program.html?type=1" class="list-item-button">个人最佳上进奖</a>
+        <a href="./program.html?type=0&voteType=0" class="list-item-button">团体最受欢迎奖</a>
+        <a href="./program.html?type=0&voteType=1" class="list-item-button">团体最佳上进奖</a>
+        <a href="./program.html?type=1&voteType=0" class="list-item-button">个人最受欢迎奖</a>
+        <a href="./program.html?type=1&voteType=1" class="list-item-button">个人最佳上进奖</a>
     </section>
     <div class="clock-wrap">
         <p class="clock-title">投票倒计时</p>
