完善前端页面

--- a/html/program.html
+++ b/html/program.html
@@ -1,25 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>舞动星球</title>
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/program.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>舞动星球</title>
+  <link rel="stylesheet" href="../css/reset.css">
+  <link rel="stylesheet" href="../css/program.css">
 </head>
+
 <body>
-    <div class="page">
-        <a href="./rule.html">
-            <button class="button-1">详细了解</button>
-        </a>
-        <div class="button-2">
-            <i class="arrow-down"></i>
-            <span class="arrow-text">向下滑动继续投票</span>
-        </div>
+  <div class="page">
+    <div class="info-wrap">
+      <p class="info-title"><span>舞动星球小贴士：</span><br>距离2019“珠海市少儿春晚节目选拔赛”还有<br/><span class="info-clock">XX天</span></p>
+      <a class="button-1" href="./rule.html">
+        <button class="button-1">详细了解</button>
+      </a>
+      <p class="info-time">少儿春晚节目选拔赛：2018年11月11日</p>
+      <p class="info-local">地点：珠海广播电视台1200平米演播厅</p>
     </div>
+    <div class="button-2">
+      <i class="arrow-down"></i>
+      <span class="arrow-text">向下滑动继续投票</span>
+    </div>
+  </div>
 </body>
 <script src="../js/jquery.js"></script>
 <script src="../js/common.js"></script>
 <script src="../js/program.js"></script>
+
 </html>
