--- a/html/vote.html
+++ b/html/vote.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>舞动星球</title>
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/vote.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>舞动星球</title>
+  <link rel="stylesheet" href="../css/reset.css">
+  <link rel="stylesheet" href="../css/vote.css">
 </head>
+
 <body>
+  <div class="page">
     <div class="vote-wrap">
-        <!-- <section class="vote-item active">
-        		<pre>1</pre>
-            <div class="head-wrap">
-                <span>《青春时刻》</span>
-            </div>
-            <div class="process-wrap">
-                <div class="process"></div>
-            </div>
-            <em>50票</em>
-        </section>
-        <div class="block"></div> -->
+      <!-- <section class="vote-item active">
+              <pre>1</pre>
+              <div class="head-wrap">
+                  <span>《青春时刻》</span>
+              </div>
+              <div class="process-wrap">
+                  <div class="process"></div>
+              </div>
+              <em>50票</em>
+          </section>
+          <div class="block"></div> -->
     </div>
     <div class="submit-wrap hide">
       <div class="submit-content">
@@ -28,8 +31,11 @@
         <button class="submit-button" id="submit">投票</button>
       </div>
     </div>
+  </div>
+
 </body>
 <script src="../js/jquery.js"></script>
 <script src="../js/common.js"></script>
 <script src="../js/vote.js"></script>
+
 </html>
