--- a/html/index.html
+++ b/html/index.html
@@ -1,26 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>舞动星球</title>
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/index.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>舞动星球</title>
+  <link rel="stylesheet" href="../css/reset.css">
+  <link rel="stylesheet" href="../css/index.css">
 </head>
+
 <body>
+  <div class="page">
     <section class="list-wrap">
-        <a href="./program.html?type=0&voteType=0" class="list-item-button">团体最受欢迎奖</a>
-        <a href="./program.html?type=0&voteType=1" class="list-item-button">团体最佳上进奖</a>
-        <a href="./program.html?type=1&voteType=0" class="list-item-button">个人最受欢迎奖</a>
-        <a href="./program.html?type=1&voteType=1" class="list-item-button">个人最佳上进奖</a>
+      <a href="./program.html?type=0&voteType=0" class="list-item-button">团体最受欢迎奖</a>
+      <a href="./program.html?type=0&voteType=1" class="list-item-button">团体最佳上进奖</a>
+      <a href="./program.html?type=1&voteType=0" class="list-item-button">个人最受欢迎奖</a>
+      <a href="./program.html?type=1&voteType=1" class="list-item-button">个人最佳上进奖</a>
     </section>
     <div class="clock-wrap">
-        <p class="clock-title">投票倒计时</p>
-        <p class="clock-time">12</p>
+      <p class="clock-title">投票倒计时</p>
+      <p class="clock-time">2天1时12分28秒</p>
     </div>
+  </div>
+
 </body>
 <script src="../js/jquery.js"></script>
 <script src="../js/common.js"></script>
 <script src="../js/index.js"></script>
+
 </html>
