--- a/html/result.html
+++ b/html/result.html
@@ -6,21 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>舞动星球</title>
     <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/index.css">
+    <style>
+
+    </style>
 </head>
 <body>
-    <section class="list-wrap">
-        <a href="./program.html?type=1" class="list-item-button">团体最受欢迎奖</a>
-        <a href="./program.html?type=2" class="list-item-button">团体最佳上进奖</a>
-        <a href="./program.html?type=3" class="list-item-button">个人最受欢迎奖</a>
-        <a href="./program.html?type=4" class="list-item-button">个人最佳上进奖</a>
+  <div class="page">
+    <section class="result-wrap">
+      <h3>投票成功！</h3>
+      <p class="link">返回查看结果</p>
     </section>
-    <div class="clock-wrap">
-        <p class="clock-title">投票倒计时</p>
-        <p class="clock-time">12</p>
-    </div>
+  </div>
 </body>
 <script src="../js/jquery.js"></script>
 <script src="../js/common.js"></script>
-<script src="../js/index.js"></script>
+<script>
+  $('.link').on('click', function () {
+    window.history.go(-1);
+  })
+</script>
 </html>
