--- a/html/program.html
+++ b/html/program.html
@@ -13,12 +13,14 @@
 <body>
   <div class="page">
     <div class="info-wrap">
-      <p class="info-title"><span>舞动星球小贴士：</span><br>距离2019“珠海市少儿春晚节目选拔赛”还有<br/><span class="info-clock">XX天</span></p>
+      <img src="../images/cw-radius.png" alt="" class="info-radius">
+      <div class="left-num"></div>
+      <div class="right-num"></div>
+      <!-- <div class="info-clock"></div> -->
+      <div class="info-day"></div>
       <a class="button-1" href="./rule.html">
-        <button class="button-1">详细了解</button>
+        详细了解
       </a>
-      <p class="info-time">少儿春晚节目选拔赛：2018年11月11日</p>
-      <p class="info-local">地点：珠海广播电视台1200平米演播厅</p>
     </div>
     <div class="button-2">
       <i class="arrow-down"></i>
@@ -26,6 +28,7 @@
     </div>
   </div>
 </body>
+<script src="http://res.wx.qq.com/open/js/jweixin-1.4.0.js"></script>
 <script src="../js/jquery.js"></script>
 <script src="../js/common.js"></script>
 <script src="../js/program.js"></script>
