--- a/html/result.html
+++ b/html/result.html
@@ -18,9 +18,11 @@
     </section>
   </div>
 </body>
+<script src="http://res.wx.qq.com/open/js/jweixin-1.4.0.js"></script>
 <script src="../js/jquery.js"></script>
 <script src="../js/common.js"></script>
 <script>
+  setShare()
   $('.link').on('click', function () {
     window.history.go(-1);
   })
