--- a/html/vote.html
+++ b/html/vote.html
@@ -34,6 +34,7 @@
   </div>
 
 </body>
+<script src="http://res.wx.qq.com/open/js/jweixin-1.4.0.js"></script>
 <script src="../js/jquery.js"></script>
 <script src="../js/common.js"></script>
 <script src="../js/vote.js"></script>
