--- a/html/rule.html
+++ b/html/rule.html
@@ -18,6 +18,7 @@
     <img src="../images/rule.jpeg" alt="">
   </div>
 </body>
+<script src="http://res.wx.qq.com/open/js/jweixin-1.4.0.js"></script>
 <script src="../js/jquery.js"></script>
 <script src="../js/common.js"></script>
 </html>
