解决分享问题和关注公众号不断跳转问题，不断跳转自行好的

--- a/html/index.html
+++ b/html/index.html
@@ -13,6 +13,12 @@
       position: absolute;
       left: 0;bottom: 0;
     }
+    .tips {
+      width: 100%;
+      position: absolute;
+      left: 0;bottom: 0;
+      text-align: center;
+    }
   </style>
 </head>
 
@@ -28,11 +34,11 @@
       <p class="clock-title">投票倒计时</p>
       <p class="clock-time"></p>
     </div>
-    <button class="testbutton">测试按钮</button>
+    <div class="tips">需要关注公众号才可投票</div>
   </div>
 
 </body>
-<script src="http://res.wx.qq.com/open/js/jweixin-1.4.0.js"></script>
+<script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
 <script src="../js/jquery.js"></script>
 <script src="../js/common.js"></script>
 <script src="../js/index.js"></script>
